--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,18 @@
+/*** Import Tailwind CSS ***/
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/*** General styles ***/
+body {
+    @apply bg-zinc-900 h-full overflow-x-hidden;
+}
+
+#__next {
+    @apply h-full;
+}
+
+html {
+    @apply h-full;
+}
